--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,37 +50,37 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
-      - name: Compress Images
-        id: calibre
-        uses: calibreapp/image-actions@main
-        with:
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-          compressOnly: true
-      - name: Create New Pull Request If Needed
-        if: steps.calibre.outputs.markdown != ''
-        uses: peter-evans/create-pull-request@v3
-        with:
-          title: Compressed Images
-          branch-suffix: timestamp
-          commit-message: Compressed Images
-          body: ${{ steps.calibre.outputs.markdown }}
+#      - name: Compress Images
+#        id: calibre
+#        uses: calibreapp/image-actions@main
+#        with:
+#          githubToken: ${{ secrets.GITHUB_TOKEN }}
+#          compressOnly: true
+#      - name: Create New Pull Request If Needed
+#        if: steps.calibre.outputs.markdown != ''
+#        uses: peter-evans/create-pull-request@v3
+#        with:
+#          title: Compressed Images
+#          branch-suffix: timestamp
+#          commit-message: Compressed Images
+#          body: ${{ steps.calibre.outputs.markdown }}
   # A set of steps used to lint the markdown files used to generate the content.
   # This is done to make sure there are consistent standards being adopted when writing the material.
   # These standards are configured in the /.github/linters folder of the repository.
-  lint:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
-    name: Lint Code Base
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-      - name: Lint Code Base
-        uses: github/super-linter@v4
-        env:
-          FILTER_REGEX_INCLUDE: .*content/.*
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VALIDATE_JSCPD: false
+# lint:
+#    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+#    name: Lint Code Base
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout Code
+#        uses: actions/checkout@v2
+#      - name: Lint Code Base
+#        uses: github/super-linter@v4
+#        env:
+#          FILTER_REGEX_INCLUDE: .*content/.*
+#          DEFAULT_BRANCH: main
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          VALIDATE_JSCPD: false
   # A set of steps used to render the website from the markdown, theme and assets into the HTML, CSS, JS and images that are delivered to a user.
   build:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
@@ -92,33 +92,33 @@ jobs:
     - name: 'Setup Hugo on Runner'
       uses: peaceiris/actions-hugo@v2
       with:
-        hugo-version: ${{ env.HUGO_VERSION }}
+        hugo-version: latest
         extended: true
-    - name: 'Replace tokens in Configuration'
-      uses: cschleiden/replace-tokens@v1.1
-      with:
-        tokenPrefix: '#{'
-        tokenSuffix: '}#'
-        files: '["config.yaml"]'
-      env:
-        hostname: 'https://www.cloudwithchris.com'
-    - name: 'Build and Minify Hugo Contents'
-      run: hugo --minify    
-    - name: 'Upload Generated Static Content as Website Artifact'
-      uses: actions/upload-artifact@v1
-      with:
-        name: website
-        path: ${{ github.workspace }}/public
+#    - name: 'Replace tokens in Configuration'
+#      uses: cschleiden/replace-tokens@v1.1
+#      with:
+#        tokenPrefix: '#{'
+#        tokenSuffix: '}#'
+#        files: '["config.yaml"]'
+#      env:
+#        hostname: 'https://www.cloudwithchris.com'
+#    - name: 'Build and Minify Hugo Contents'
+#      run: hugo --minify    
+#    - name: 'Upload Generated Static Content as Website Artifact'
+#      uses: actions/upload-artifact@v1
+#      with:
+#        name: website
+#        path: ${{ github.workspace }}/public
   deploy:  
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
-    needs: [compressor, lint, build]
+#    needs: [compressor, lint, build]
     name: Deploy (Prod)
     steps:
-      - name: 'Download Website Artifact'
-        uses: actions/download-artifact@v1
-        with:
-          name: website
+#      - name: 'Download Website Artifact'
+#        uses: actions/download-artifact@v1
+#        with:
+#          name: website
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
