--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,9 +127,9 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_LIVELY_FIELD_0F34D4403 }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
-          app_location: "/"
-          api_location: "api" # Api source code path - optional
-          output_location: "public" # Built app content directory - optional
+          app_location: 'website'
+#          api_location: "api" # Api source code path - optional
+#          output_location: "public" # Built app content directory - optional
           skip_app_build: true
   # A set of steps used to close old staging sites that are no longer needed, as the PR has now been merged.
   close_pull_request_job:
